fix intro image overlap with collapsed navbar

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -406,6 +406,10 @@ ul.banner-social-buttons li {
       top: -20px;
       left: -200px;
     }
+
+    .intro {
+      margin-top: 57px;
+    }
 }
 
 footer {
